<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WanderLost</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hintPassword">Password</string>
    <string name="hintUsername">Username</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintAge">Age</string>
    <string name="hintEmail">Email</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="title_activity_signup_page">SignupPage</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_posts_page">PostsPage</string>
    <string name="title_activity_followers_page">Followers Page</string>
    <string name="title_activity_following_page">Following Page</string>
    <string name="title_activity_follower_single">Follower Single</string>
    <string name="title_activity_following_single">Following Single</string>
    <string name="title_activity_composer">Composer</string>
    <string name="title_activity_edit_post">EditPost</string>
    <string name="title_activity_change_picture">ChangePicture</string>
    <string name="title_activity_posts_page_adapter">PostsPageAdapter</string>
    <string name="title_activity_posts_single_item_view">PostsSingleItemView</string>

</resources>
