<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupPage" >

    <EditText
       android:id="@+id/editFirstName"
       android:layout_width="300dp"
       android:layout_height="35dp"
       android:layout_alignLeft="@+id/editLastName"
       android:layout_alignParentTop="true"
       android:layout_marginTop="32dp"
       android:ems="10"
       android:hint="@string/hintFirstName"
       android:inputType="textPersonName" 
       android:textColor="#ffffff"/>

   <EditText
       android:id="@+id/editLastName"
       android:layout_width="300dp"
       android:layout_height="35dp"
       android:layout_alignLeft="@+id/editAge"
       android:layout_below="@+id/editFirstName"
       android:layout_marginTop="22dp"
       android:ems="10"
       android:hint="@string/hintLastName"
       android:inputType="textPersonName"
       android:textColor="#ffffff" />

   <EditText
       android:id="@+id/editAge"
       android:layout_width="300dp"
       android:layout_height="35dp"
       android:layout_alignLeft="@+id/editEmail"
       android:layout_below="@+id/editLastName"
       android:layout_marginTop="19dp"
       android:ems="10"
       android:hint="@string/hintAge"
       android:inputType="textPersonName"
       android:textColor="#ffffff" />

   <EditText
       android:id="@+id/editEmail"
       android:layout_width="300dp"
       android:layout_height="35dp"
       android:layout_alignLeft="@+id/editPassword"
       android:layout_below="@+id/editAge"
       android:layout_marginTop="20dp"
       android:ems="10"
       android:hint="@string/hintEmail"
       android:inputType="textPersonName" 
       android:textColor="#ffffff"/>

   <EditText
       android:id="@+id/editPassword"
       android:layout_width="300dp"
       android:layout_height="35dp"
       android:layout_alignLeft="@+id/editConfirmPassword"
       android:layout_below="@+id/editEmail"
       android:layout_marginTop="23dp"
       android:ems="10"
       android:hint="@string/hintPassword"
       android:inputType="textPersonName" 
       android:textColor="#ffffff"/>

   <EditText
       android:id="@+id/editConfirmPassword"
       android:layout_width="300dp"
       android:layout_height="35dp"
       android:layout_below="@+id/editPassword"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="26dp"
       android:ems="10"
       android:hint="@string/hintConfirmPassword"
       android:inputType="textPersonName" 
       android:textColor="#ffffff"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:background="#80000000"
        android:gravity="center_vertical|center_horizontal|center"
        android:onClick="submit"
        android:text="Submit"
        android:textColor="#ffffff"
        android:textSize="20sp" />
   

</RelativeLayout>
